# WarpGo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  dependabot.yml  release.yml
WarpGo-manager/: clean-deep.sh  index.html  package-lock.json  package.json
WarpGo-manager/src/: App.css  App.vue  i18n-vue.ts  index.css  main-vue.ts
WarpGo-manager/src-tauri/: Cargo.toml  tauri.conf.json
WarpGo-manager/src-tauri/src/: account_manager.rs  database.rs  main.rs  proxy_manager.rs
docs/: GITHUB_ACTIONS.md
